kubernetes-minikube-main/myservice-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myservice2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myservice2
  template:
    metadata:
      labels:
        app: myservice2
    spec:
      containers:
        - image: fatmaha/myservice2:1
          imagePullPolicy: IfNotPresent
          name: myservice2
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
      restartPolicy: Always
